deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: srujan1165/wise
        ports:
        - containerPort: 4499
---
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  type: NodePort   
  selector:
    app: wisecow
  ports:
    - protocol: TCP
      port: 80         
      targetPort: 4499 
      nodePort: 30007
